--- a/index.html
+++ b/index.html
@@ -14,33 +14,25 @@
     
     <h1 class='center'> Arianna Basilone </h1>
     <h2> Software Engineer | Ivey Business Student</h2>
-    <div id="google_translate_element" class='right'></div>
-    <script type="text/javascript">
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-        }
-    </script>        
-    <!-- <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
     
-    <!-- <p class='center'>
-        <button id='loginB'>Welcome</button>
-    </p> -->
 </header>
 
 <body>
     <div>
         <p class="bio">Welcome! I am a software developer with a professional business background and interest in 
-            entrepreneurship. I'll be graduating in April 2020, and ready to work for a dynamic team.
+            entrepreneurship. I'll be graduating in <b>April 2020</b>, and ready to work for a dynamic team.
             Feel free to navigate this page and learn more about me.</p>        
     </div>
     <div>
         <!-- icons -->
-        <a href="mailto:abasilone.hba2020@ivey.ca"><image id='mail' class="icon" src="resources/icons/email.png" alt="Email Icon"></image></a>
+        <a href="mailto:abasilone.hba2020@ivey.ca"><image id='mail' class="icon" src="resources/icons/email2.png" alt="Email Icon"></image></a>
         &nbsp;
-        <a href="https://github.com/aribasilone" target="_blank"> <image id='gh' class="icon" src="resources/icons/github.png" alt="Github Icon"></image></a>
+        <a href="https://github.com/aribasilone" target="_blank"> <image id='gh' class="icon" src="resources/icons/github.png" alt="GitHub Icon"></image></a>
         &nbsp;
         <a href="https://www.linkedin.com/in/arianna-basilone/" target="_blank"><image id='li' class="icon" src="resources/icons/li.png" alt="LinkedIn Icon"></image></a>
     </div>
+
+    </br>
 
     <div>
         <nav>
