Capstone landing page added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <table>
                 <tr>
                     <th><a href="resources/AB_Resume.pdf" target= "_blank" class ="boxes"><p>Resume</p></a></th>
-                    <th><a href="resources/Proposal.pdf" target= "_blank" class="boxes"><p> Capstone</p></a></th>
+                    <th><a href="capstone.html" class="boxes"><p> Capstone</p></a></th>
                     <th><a href=""target= "_blank" class="boxes"><p>Side Projects</p></a></th>
                 </tr>
             </table>                   
