image extension update

--- a/capstone.html
+++ b/capstone.html
@@ -25,8 +25,8 @@
 <body>
     <div class='body'>
         <br></br>
-        <image id="capLogo" src="resources/capstone_logo.png" alt= "AR We There Yet? Logo"></image>
-        <image id="arProto"src="resources/capestone_AR_proto.png" alt="AR Prototype Photo"></image>
+        <image id="capLogo" src="resources/capstone_logo.PNG" alt= "AR We There Yet? Logo"></image>
+        <image id="arProto"src="resources/capestone_AR_proto.PNG" alt="AR Prototype Photo"></image>
         <p class="blurb">
             <i class="blurb">AR We There Yet?</i> is an augmented-reality based wayfinding solution.
             Available as a mobile app, it provides real-time, real-world overlay cues 
