project page added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <tr>
                     <th><a href="resources/AB_Resume.pdf" target= "_blank" class ="boxes"><p>Resume</p></a></th>
                     <th><a href="capstone.html" class="boxes"><p> Capstone</p></a></th>
-                    <th><a href=""target= "_blank" class="boxes"><p>Side Projects</p></a></th>
+                    <th><a href="projects.html" class="boxes"><p>Side Projects</p></a></th>
                 </tr>
             </table>                   
            
@@ -50,7 +50,7 @@
 </body>
 
 <footer>
-    <p>&copy; Arianna Basilone 2019</p>
+    <p>&copy; Arianna Basilone 2020</p>
 </footer>
 
 </html>
