--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
                             <a href="https://aribasilone.github.io/aribasilone.github.io-weatherApp/" target= "_blank" class="boxes">
                                 <image class= "projScreen" src="resources/weatherapp.PNG" alt="Weather App Screenshot"></image>
                                 <h3> Weather App</h3>
-                                <p><i>A React Native app that provides weather information for a given destination. Uses various api calls to verify location and then grab corresponding data.</i></p>
+                                <p><i>A React app that provides weather information for a given destination. Uses various api calls to verify location and then grab corresponding data.</i></p>
                             </a>
                             
                         </th>
@@ -41,7 +41,7 @@
                             <a href="https://aribasilone.github.io/aribasilone.github.io-soundfxkit/" target= "_blank" class="boxes">
                                 <image class= "projScreen" src="resources/soundfx.PNG" alt="Sound FX Kit Screenshot"></image>
                                 <h3>Sound FX Kit</h3>
-                                <p><i>Interactice website for playing various cartoon and comedy sound effects.</i></p>
+                                <p><i>Interactive webpage for playing various cartoon and comedy sound effects.</i></p>
                             </a>
                             
                         </th>
