quick grad and resume update

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 <header>
     
     <h1 class='center'> Arianna Basilone </h1>
-    <h2> Software Engineer | Ivey Business Student</h2>
+    <h2> Software Engineering | Ivey Business Graduate</h2>
     
 </header>
 
 <body>
     <div>
         <p class="bio">Welcome! I am a software developer with a professional business background and interest in 
-            entrepreneurship. I'll be graduating in <b>April 2020</b>, and ready to work for a dynamic team.
+            entrepreneurship. As a new graduate <b>(Spring 2020)</b>, I am ready to work full-time for
+            your dynamic company and team.
+            Have a project, idea, or startup instead? I can be of assistance there too!
             Feel free to navigate this page and learn more about me.</p>        
     </div>
     <div>
