basic pix slide

--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
         <p>&copy; Arianna Basilone 2020</p>
         <nav>
             <!-- icons -->
-            <a href="mailto:abasilone.hba2020@ivey.ca"><image id='mail' class="icon" src="resources/icons/email2.png" alt="Email Icon"></image></a>
+            <a href="mailto:abasilone.hba2020@ivey.ca"><image id='mail' class="icon" src="resources/icons/email.png" alt="Email Icon"></image></a>
             &nbsp;
             <a href="https://github.com/aribasilone" target="_blank"> <image id='gh' class="icon" src="resources/icons/github.png" alt="GitHub Icon"></image></a>
             &nbsp;
