Reorganize files and reference the files using new folder path

--- a/capstone.html
+++ b/capstone.html
@@ -2,13 +2,19 @@
 <html lang="en-US">
 <head>
     <title>Arianna Basilone Capstone</title>
+    <link rel="icon" type="image/png" href="resources/favicon/aribasilone_logo_16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="resources/favicon/aribasilone_logo_32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="resources/favicon/aribasilone_logo_96x96.png" sizes="96x96">
+    <!--meta data/SEO-->
     <meta charset="UTF-8">
-    <!--script type='text/javascript' src='profileScript.js'></script-->
-    
-    <!--link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">--> 
-    <link rel="stylesheet" href="profile.css">
-    <link rel = "stylesheet" href="capstone.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel = "stylesheet">   
+    <meta name = "description" content="2020 Software Engineering capstone project of Arianna Basilone: AR We There Yet?.">
+    <meta name = "keywords" content="Software Engineering, Entrepreneur, Business, Freelance, Web Developer"> 
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <!--styling & scripts-->
+    <link rel="stylesheet" href="css/profile.css">
+    <link rel = "stylesheet" href="css/capstone.css">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo&family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
 </head>
 
 <header>
