--- a/freelance.html
+++ b/freelance.html
@@ -11,11 +11,11 @@
     <meta name = "keywords" content="Software Engineering, Entrepreneur, Business, Freelance, Web Developer"> 
     <meta name=viewport content="width=device-width, initial-scale=1">
     <!--styling & scripts-->
-    <link rel="stylesheet" href="profile.css">
-    <link rel="stylesheet" href="other.css">
+    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="css/other.css">
     <link href="https://fonts.googleapis.com/css2?family=Heebo&family=Raleway&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="buttons.js"></script> 
+    <script src="js/buttons.js"></script> 
 </head>
 
 <header>
