--- a/projects.html
+++ b/projects.html
@@ -2,12 +2,17 @@
 <html lang="en-US">
     <head>
         <title>Arianna Basilone Projects</title>
+        <link rel="icon" type="image/png" href="resources/favicon/aribasilone_logo_16x16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="resources/favicon/aribasilone_logo_32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="resources/favicon/aribasilone_logo_96x96.png" sizes="96x96">
+        <!--meta data/SEO-->
         <meta charset="UTF-8">
-        <!--script type='text/javascript' src='profileScript.js'></script-->
-        
-        <!--link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">--> 
-        <link rel="stylesheet" href="profile.css">
-        <link rel = "stylesheet" href="capstone.css">
+        <meta name = "description" content="Software project portfolio of Arianna Basilone">
+        <meta name = "keywords" content="Software Engineering, Entrepreneur, Business, Freelance, Web Developer"> 
+        <meta name=viewport content="width=device-width, initial-scale=1">
+        <!--styling & scripts-->
+        <link rel="stylesheet" href="css/profile.css">
+        <link rel = "stylesheet" href="css/capstone.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel = "stylesheet">   
     </head>
 
