Spacing edits, mobile responsive edits with media queries, additional image sizes (resizing) for faster loading.

--- a/capstone.html
+++ b/capstone.html
@@ -68,17 +68,17 @@
     <div class="body">
         <h3>Documentation</h3>
         <nav>    
-            <table>
+            <table class="capstoneTable">
                 <tr onclick="clickUserManButton()">
-                    <th><p> User Manual</p></a></th>
+                    <td><p> User Manual</p></a></td>
                 </tr>
                 
                 <tr onclick="clickPropButton()">
-                    <th><p> Proposal</p></a></th>
+                    <td><p> Proposal</p></a></td>
                 </tr>
                 
                 <tr onclick="clickSRSButton()">
-                    <th><p>SRS</p></a></th>
+                    <td><p>SRS</p></a></td>
                 </tr>
             </table>                   
             <img src="resources/uwo.png" alt="UWO Logo"></img>
