--- a/skillsets.html
+++ b/skillsets.html
@@ -24,18 +24,19 @@
     <h1 class='center'> Arianna Basilone </h1>
     <h2> Skillsets & Knowledge</h2>
     <div>
-        <nav class="navBar" aria-label="Main Navigation">
+        <nav id="mainNav" class="navBar" aria-label="Main Navigation">
+            <a id="menuIcon" href="javascript:void(0);" class="boxes" onclick="mobileNavButton()" aria-haspopup="true" aria-expanded="false"><span class="fa fa-bars"></span></a> 
             <a href="index.html" class ="boxes"><span class="fa fa-home" aria-hidden="true"></span> Profile</a>       
             <a href="resources/AB_Resume.pdf" target= "_blank" class ="boxes">Resume</a>
             <div class="dropdown">
-                <a href="projects.html" class="boxes" aria-haspopup="true" aria-expanded="false">Projects <span class="fa fa-caret-down"></span></a>
-                <div class="dropContent">
+                <a  href="javascript:void(0);" class="boxes" onclick="projDropdownButton()" class="boxes" aria-haspopup="true" aria-expanded="false">Projects <span id="projIcon" class="fa fa-caret-down"></span></a>
+                <div id="projDropContent" class="dropContent">
                     <a href="capstone.html" class="boxes">Capstone</a>
                     <a href="projects.html" class="boxes">Side Projects </a>
                     <a href="freelance.html"class="boxes">Freelance Work</a>
                 </div>                
             </div> 
-            <a href="skillsets.html" class="boxes activePage">Skillsets</a>          
+            <a href="skillsets.html" class="boxes activePage">Skillsets</a>         
         </nav>
     </div>
     
@@ -122,7 +123,7 @@
             <div class="slide-3x nonfocus">
                 <img src="resources/profilepics/concert_photography_2_1000px.JPG" class="slide-img-3x" alt="Arianna Basilone photography for concert - stage lighting">
             </div>
-            <div class="slide-3x focused">
+            <div class="slide-3x nonfocus">
                 <img src="resources/profilepics/concert_photography_1000px.JPG" class="slide-img-3x" alt="Arianna Basilone as photographer on concert stage" >  
             </div>  
             <div class="slide-3x nonfocus">
