--- a/capstone.html
+++ b/capstone.html
@@ -24,13 +24,13 @@
     <h2> Capstone</h2>
     <div>
         <nav id="mainNav" class="navBar" aria-label="Main Navigation">
-            <a id="menuIcon" href="javascript:void(0);" class="boxes" onclick="mobileNavButton()" aria-haspopup="true" aria-expanded="false"><span class="fa fa-bars"></span></a> 
+            <a id="menuIcon" href="javascript:void(0);" class="boxes" onclick="mobileNavButton(this)" aria-haspopup="true" aria-expanded="false"><span class="fa fa-bars"></span></a> 
             <a href="index.html" class ="boxes"><span class="fa fa-home" aria-hidden="true"></span> Profile</a>       
             <a href="resources/AB_Resume.pdf" target= "_blank" class ="boxes">Resume</a>
             <div class="dropdown">
-                <a  href="javascript:void(0);" class="boxes" onclick="projDropdownButton()" class="boxes" aria-haspopup="true" aria-expanded="false">Projects <span id="projIcon" class="fa fa-caret-down"></span></a>
+                <a  href="javascript:void(0);" class="boxes" onclick="projDropdownButton(this)" aria-haspopup="true" aria-expanded="false">Projects <span id="projIcon" class="fa fa-caret-down"></span></a>
                 <div id="projDropContent" class="dropContent">
-                    <a href="capstone.html" class="boxes activePage">Capstone</a>
+                    <a href="capstone.html" class="boxes activePage" aria-current="page">Capstone</a>
                     <a href="projects.html" class="boxes">Side Projects </a>
                     <a href="freelance.html"class="boxes">Freelance Work</a>
                 </div>                
