--- a/freelance.html
+++ b/freelance.html
@@ -24,15 +24,15 @@
     <h2> Freelance & Contract Work</h2>
     <div>
         <nav id="mainNav" class="navBar" aria-label="Main Navigation">
-            <a id="menuIcon" href="javascript:void(0);" class="boxes" onclick="mobileNavButton()" aria-haspopup="true" aria-expanded="false"><span class="fa fa-bars"></span></a> 
+            <a id="menuIcon" href="javascript:void(0);" class="boxes" onclick="mobileNavButton(this)" aria-haspopup="true" aria-expanded="false"><span class="fa fa-bars"></span></a> 
             <a href="index.html" class ="boxes"><span class="fa fa-home" aria-hidden="true"></span> Profile</a>       
             <a href="resources/AB_Resume.pdf" target= "_blank" class ="boxes">Resume</a>
             <div class="dropdown">
-                <a  href="javascript:void(0);" class="boxes" onclick="projDropdownButton()" class="boxes" aria-haspopup="true" aria-expanded="false">Projects <span id="projIcon" class="fa fa-caret-down"></span></a>
+                <a  href="javascript:void(0);" class="boxes" onclick="projDropdownButton(this)" aria-haspopup="true" aria-expanded="false">Projects <span id="projIcon" class="fa fa-caret-down"></span></a>
                 <div id="projDropContent" class="dropContent">
                     <a href="capstone.html" class="boxes">Capstone</a>
                     <a href="projects.html" class="boxes">Side Projects </a>
-                    <a href="freelance.html"class="boxes activePage">Freelance Work</a>
+                    <a href="freelance.html"class="boxes activePage" aria-current="page">Freelance Work</a>
                 </div>                
             </div> 
             <a href="skillsets.html" class="boxes">Skillsets</a>         
@@ -55,6 +55,11 @@
 
         <h3>Clientel & Projects</h3>
         <ul class="clientList">
+            <li><span>'22 Newman Innovations - Renovations & Remodeling Contractor</span></br>
+                Create a brand new website, that showcases past project work, establishes credibility and improves discoverability. 
+                Implement a user-friendly web builder that can be easily used by client to self-upload latest photos.
+                Update website security protocol (SSL) and generated privacy policy.
+            </li>
             <li><span>'22 MonstrARTity - Non-Profit Festival & Arts Organization</span></br> Create new webpages and update content of existing pages, 
                 update web forms with new code validation (RegEx) and new on-sumbit actions.
             </li>
@@ -85,7 +90,7 @@
         <div class="availFlex">
             <div></div>
             <p>Rates vary depending on the scope and time frame of intended project. 
-            For minor website updates, rates start at CAD $35.00/hr with minimum 1hr charge. 
+            For minor website updates, rates start at CAD $30.00/hr with minimum 1hr charge. 
             </p>
             <button type="button" name="Contact button" onclick="contactButton()"class="contactButton">Contact for Quote</button>
         </div>  
