Resume page added. Additional mobile styling and fixes.

--- a/capstone.html
+++ b/capstone.html
@@ -26,7 +26,7 @@
         <nav id="mainNav" class="navBar" aria-label="Main Navigation">
             <a id="menuIcon" href="javascript:void(0);" class="boxes" onclick="mobileNavButton(this)" aria-haspopup="true" aria-expanded="false"><span class="fa fa-bars"></span></a> 
             <a href="index.html" class ="boxes"><span class="fa fa-home" aria-hidden="true"></span> Profile</a>       
-            <a href="resources/AB_Resume.pdf" target= "_blank" class ="boxes">Resume</a>
+            <a href="resume.html" class ="boxes">Resume</a>
             <div class="dropdown">
                 <a  href="javascript:void(0);" class="boxes" onclick="projDropdownButton(this)" aria-haspopup="true" aria-expanded="false">Projects <span id="projIcon" class="fa fa-caret-down"></span></a>
                 <div id="projDropContent" class="dropContent">
@@ -57,12 +57,14 @@
         <progress value="100" max="100"></progress> 
         <p class="statusBar">
             <span class="statusLabel">Version 1.0 Developed!</span>
-        </p>  
+        </p>
 
-        <iframe width="90%" height="385" src="https://www.youtube.com/embed/GJVQ1ebo0dI" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-        <p class="code">Code available on GitHub: <a class="code" href="https://github.com/monanshishah/Capstone"><b>monanshishah/Capstone</b></a></p>
+        <div class="videoWrapper">
+           <iframe width="560" height="349" src="https://www.youtube.com/embed/GJVQ1ebo0dI" frameborder="0" 
+           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        
+        <p class="code">Code available on GitHub: <a class="code" href="https://github.com/monanshishah/Capstone">monanshishah/Capstone</a></p>
         <img src="resources/uwo.png" alt="UWO Logo"></img>      
     </div>
 
