--- a/skillsets.html
+++ b/skillsets.html
@@ -27,7 +27,7 @@
         <nav id="mainNav" class="navBar" aria-label="Main Navigation">
             <a id="menuIcon" href="javascript:void(0);" class="boxes" onclick="mobileNavButton(this)" aria-haspopup="true" aria-expanded="false"><span class="fa fa-bars"></span></a> 
             <a href="index.html" class ="boxes"><span class="fa fa-home" aria-hidden="true"></span> Profile</a>       
-            <a href="resources/AB_Resume.pdf" target= "_blank" class ="boxes">Resume</a>
+            <a href="resume.html" class ="boxes">Resume</a>
             <div class="dropdown">
                 <a  href="javascript:void(0);" class="boxes" onclick="projDropdownButton(this)" aria-haspopup="true" aria-expanded="false">Projects <span id="projIcon" class="fa fa-caret-down"></span></a>
                 <div id="projDropContent" class="dropContent">
